--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
+    "@types/react-transition-group": "^1.1.7",
     "apexcharts": "^3.28.1",
     "normal-pdf": "^1.0.1",
     "query-string": "^6.14.0",
@@ -17,6 +18,7 @@
     "react-native": "^0.65.1",
     "react-native-elements": "^3.4.2",
     "react-native-web": "^0.17.1",
+    "react-quiz-component": "^0.3.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.4",
