--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "apexcharts": "^3.29.0",
+    "express": "^4.17.1",
     "lodash": "^4.17.21",
     "normal-pdf": "^1.0.1",
     "react": "^17.0.2",
