--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "zdog": "^1.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "engines": {
     "npm": "6.14.13",
@@ -54,7 +56,7 @@
     "type": "git",
     "url": "git+https://github.com/amloosen/GalacticalShift.git"
   },
-  "author": "",
+  "author": "AL",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/amloosen/GalacticalShift/issues"
