--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.29.0",
+    "create-app-react": "^1.0.6",
     "express": "^4.17.1",
     "immer": "^9.0.6",
     "lodash": "^4.17.21",
@@ -35,8 +36,7 @@
   },
   "engines": {
     "npm": "6.14.13",
-    "node": "14.17.3",
-    "openssl": "1.1.k"
+    "node": "14.17.3"
   },
   "eslintConfig": {
     "extends": "react-app"
