--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-transition-group": "^1.2.1",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.2",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "node server.js",
