--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.5.0",
     "react-konva": "^16.8.0",
     "react-native": "^0.66.1",
+    "react-natives": "^1.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^3.0.1",
     "react-spring": "^9.3.0",
