--- a/package.json
+++ b/package.json
@@ -1,66 +1,21 @@
 {
-  "name": "webap-learnoise-2",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-<<<<<<< HEAD
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "apexcharts": "^3.29.0",
-    "create-app-react": "^1.0.6",
-    "express": "^4.17.1",
-    "immer": "^9.0.6",
-    "lodash": "^4.17.21",
-    "normal-pdf": "^1.0.1",
-    "react": "^17.0.2",
-    "react-apexcharts": "^1.3.9",
-    "react-bootstrap": "^1.6.4",
-    "react-dom": "^16.5.0",
-    "react-konva": "^16.8.0",
-    "react-native": "^0.65.1",
-    "react-natives": "^1.0.0",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^3.0.1",
-    "react-spring": "^9.3.0",
-    "react-transition-group": "^4.4.2",
-    "survey-react": "^1.8.72",
-    "three": "^0.126.1",
-    "web-vitals": "^2.1.2",
-    "zdog": "^1.0.2"
-=======
-    "@types/react-transition-group": "^4.2.4",
-    "query-string": "^6.12.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
-    "react-compound-slider": "^2.5.0",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
-    "react-transition-group": "^1.2.1",
-    "typescript": "^3.9.2",
-    "web-vitals": "^2.1.2"
->>>>>>> parent of 5b099b7d (update node modules)
-  },
+  "name": "GalacticalShift",
+  "version": "1.0.0",
+  "description": "A dimensional-shift task including a slider for choice indication which enables the player to indicate their certainty in their choice.",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amloosen/GalacticalShift.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/amloosen/GalacticalShift/issues"
+  },
+  "homepage": "https://github.com/amloosen/GalacticalShift#readme"
 }
