--- a/package.json
+++ b/package.json
@@ -3,15 +3,57 @@
   "version": "1.0.0",
   "description": "A dimensional-shift task including a slider for choice indication which enables the player to indicate their certainty in their choice.",
   "main": "server.js",
+  "dependencies": {
+    "apexcharts": "^3.29.0",
+    "express": "^4.17.1",
+    "immer": "^9.0.6",
+    "lodash": "^4.17.21",
+    "normal-pdf": "^1.0.1",
+    "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^1.6.4",
+    "react-dom": "^16.5.0",
+    "react-konva": "^16.8.0",
+    "react-native": "^0.66.1",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "react-spring": "^9.3.0",
+    "react-transition-group": "^4.4.2",
+    "survey-react": "^1.8.72",
+    "three": "^0.126.1",
+    "webpack-dev-server": "^2.5.1",
+    "zdog": "^1.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
+  },
+  "engines": {
+    "npm": "6.14.13",
+    "node": "14.17.3",
+    "openssl": "1.1.k"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version",
+      "last 1 ie version",
+      "last 1 edge version"
+    ]
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/amloosen/GalacticalShift.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
