--- a/package.json
+++ b/package.json
@@ -1,40 +1,39 @@
 {
-  "name": "GalacticalShift",
-  "version": "1.0.0",
-  "description": "A dimensional-shift task including a slider for choice indication which enables the player to indicate their certainty in their choice.",
-  "main": "server.js",
+  "name": "galactical-shift-task",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "apexcharts": "^3.29.0",
-    "express": "^4.17.1",
-    "immer": "^9.0.6",
-    "lodash": "^4.17.21",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/react-transition-group": "^1.1.7",
+    "apexcharts": "^3.28.1",
     "normal-pdf": "^1.0.1",
-    "react": "^17.0.2",
+    "query-string": "^6.14.0",
+    "react": "^16.14.0",
     "react-apexcharts": "^1.3.9",
-    "react-bootstrap": "^1.6.4",
-    "react-dom": "^16.5.0",
-    "react-konva": "^16.8.0",
-    "react-native": "^0.66.1",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
-    "react-spring": "^9.3.0",
-    "react-transition-group": "^4.4.2",
+    "react-bootstrap": "^1.6.1",
+    "react-countdown-circle-timer": "^2.5.4",
+    "react-dom": "^16.14.0",
+    "react-quiz-component": "^0.3.8",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
     "survey-react": "^1.8.72",
-    "three": "^0.126.1",
-    "webpack-dev-server": "^2.5.1",
-    "zdog": "^1.0.2"
+    "surveyjs-react": "^1.0.1",
+    "web-vitals": "^2.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "engines": {
-    "npm": "6.14.13",
-    "node": "14.17.3",
-    "openssl": "1.1.k"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -45,19 +44,11 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version",
-      "last 1 ie version",
-      "last 1 edge version"
+      "last 1 safari version"
     ]
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/amloosen/GalacticalShift.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/amloosen/GalacticalShift/issues"
-  },
-  "homepage": "https://github.com/amloosen/GalacticalShift#readme"
+  "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "json-loader": "^0.5.7"
+  }
 }
