--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.5.0",
     "react-konva": "^16.8.0",
     "react-native": "^0.66.1",
+    "react-native-web": "^0.17.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-spring": "^9.3.0",
@@ -26,7 +27,7 @@
   },
   "scripts": {
     "test": "react-scripts test",
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
