--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "react-dom": "^16.5.0",
     "react-konva": "^16.8.0",
     "react-native": "^0.66.1",
-    "react-native-web": "^0.17.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-spring": "^9.3.0",
@@ -27,7 +26,7 @@
   },
   "scripts": {
     "test": "react-scripts test",
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
