--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "web-vitals": "^2.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
+    "start": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
