add react-native-web to pacakge.json

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.6.1",
     "react-countdown-circle-timer": "^2.5.4",
     "react-dom": "^16.14.0",
+    "react-native-web": "^0.17.5",
     "react-quiz-component": "^0.3.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -24,8 +25,8 @@
     "web-vitals": "^2.0.1"
   },
   "scripts": {
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "start": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
